// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`0. IconDiamond sets a width when height is set 1`] = `
<svg
  height={50}
  viewBox="064d9dc888226a281482b4aa9646de05"
  width={50}
/>
`;

exports[`1. IconTwitter sets a width when height is set 1`] = `
<svg
  height={50}
  viewBox="f0ca3b77f62fa9136cdfd9a3f847d07b"
  width={62.5}
/>
`;

exports[`2. IconVideo sets a width when height is set 1`] = `
<svg
  height={50}
  viewBox="7d01bea7ecb0281e219ae5357dfe4a3f"
  width={86}
/>
`;

exports[`3. IconEmail sets a width when height is set 1`] = `
<svg
  height={50}
  viewBox="b4de9ef077a0a2ad684a1d8e6916ebc4"
  width={68.75}
/>
`;

exports[`4. IconStar sets a width when height is set 1`] = `
<svg
  height={50}
  viewBox="f37430a4df9c4efc01308a92d39c898f"
  width={50}
/>
`;

exports[`5. IconFacebook sets a width when height is set 1`] = `
<svg
  height={50}
  viewBox="bd9a71c8a3142edf7cab6a62a2277378"
  width={25}
/>
`;
